tests/snapshots/run_wpt_conformance__trtx_convTranspose2d_options_padding_is_the_same_upper_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv_transpose2d.https.any.js",
    "convTranspose2d options.padding is the same upper padding",
    "trtx",
    "PASS",
)
